Updates for v3.6 compatibility
Since reCAPTCHA is built-in for v3.6, this plugin should leverage
that configuration.

--- a/app/views/workarea/storefront/shares/new.html.haml
+++ b/app/views/workarea/storefront/shares/new.html.haml
@@ -43,7 +43,7 @@
         %span.property__requirement.property__requirement--optional= t('workarea.storefront.forms.optional')
       .value= text_area_tag 'message', @share.message, class: 'text-box text-box--multi-line text-box--wide', placeholder: t('workarea.storefront.shares.message_placeholder'), maxlength: Workarea.config.max_email_share_message_length
 
-    .property= recaptcha_tags
+    .property= recaptcha(action: 'share')
 
     .grid.grid--auto
       %p.grid__cell= button_tag t('workarea.storefront.forms.send'), value: 'email_friend', class: 'button'
